--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -6400,6 +6400,7 @@ galaxyspace {
     B:ganymedemagnesiumore=true
     B:ganymedesubgrunt=true
     B:ganymedetitanuimore=true
+    B:geothermalgenerator=false
     B:haumeagrunt=true
     B:ioTChestT5=false
     B:ioash=true
