--- a/config/GalaxySpace/biomes.conf
+++ b/config/GalaxySpace/biomes.conf
@@ -3,9 +3,16 @@
 dimensions {
     # ID Biome for ACentauri Bb
     I:IDACentauriBbBiome=218
-
-    # ID Biome for Barnarda C (219, 220, 221)
     I:IDBarnarda2Biome=219
+
+    # ID Biome for Barnarda C (Hills)
+    I:IDBarnardaCBiomeHills=220
+
+    # ID Biome for Barnarda C (Low Plains)
+    I:IDBarnardaCBiomeLowPlains=221
+
+    # ID Biome for Barnarda C (Shores)
+    I:IDBarnardaCBiomeShores=219
 
     # ID Biome for Barnarda E
     I:IDBarnardaEBiome=222
@@ -51,9 +58,19 @@ dimensions {
 
     # ID Biome for Phobos (Mars moon)
     I:IDPhobosBiome=207
-
-    # ID Biome for Pluto
     I:IDPlutoBiome=204
+
+    # ID Biome for Pluto (1)
+    I:IDPlutoBiome1=234
+
+    # ID Biome for Pluto (2)
+    I:IDPlutoBiome2=235
+
+    # ID Biome for Pluto (3)
+    I:IDPlutoBiome3=236
+
+    # ID Biome for Pluto (4)
+    I:IDPlutoBiome4=237
 
     # ID Biome for Proteus (Neptune moon)
     I:IDProteusBiome=216
