--- a/config/GalaxySpace/dimensions.conf
+++ b/config/GalaxySpace/dimensions.conf
@@ -2,7 +2,7 @@
 
 dimensions {
     # Dimension ID for Barnarda C
-    I:dimensionIDBarnardaC=-22
+    I:dimensionIDBarnardaC=-45
 
     # Dimension ID for Barnarda E
     I:dimensionIDBarnardaE=-23
@@ -17,7 +17,7 @@ dimensions {
     I:dimensionIDCentauriBb=-21
 
     # Dimension ID for Ceres
-    I:dimensionIDCeres=-7
+    I:dimensionIDCeres=-11
 
     # Dimension ID for Deimos (Mars moon)
     I:dimensionIDDeimos=-12
@@ -36,6 +36,15 @@ dimensions {
 
     # Dimension ID for Io (Jupiter moon)
     I:dimensionIDIo=-13
+
+    # Dimension ID for Jupiter
+    I:dimensionIDJupiter=-33
+
+    # Dimension ID for Jupiter Space Station
+    I:dimensionIDJupiterOrbit=-43
+
+    # Dimension ID for Static Jupiter Space Stations
+    I:dimensionIDJupiterOrbitStatic=-44
 
     # Dimension ID for Kuiper Belt
     I:dimensionIDKuiperBelt=-9
@@ -129,6 +138,9 @@ general {
 
     # Enable/Disable Mars Space Station
     B:enableMarsSS=true
+
+    # Enable/Disable Jupiter Space Station
+    B:enableJupiterSS=true
 
     # Enable/Disable Unreachable Planets/Moons
     B:enableUnreachable=true
