--- a/local/ftbu/config.json
+++ b/local/ftbu/config.json
@@ -22,6 +22,8 @@
     "disable_chunkloading": false,
     "restart_timer": 0.0,
     "safe_spawn": false,
+    "server_info_difficulty": true,
+    "server_info_mode": true,
     "sign_home": true,
     "sign_warp": true,
     "spawn_area_in_sp": false,
