--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -25,13 +25,13 @@ dimensions {
     I:biomeIDBase=102
 
     # Dimension ID for the Moon
-    I:idDimensionMoon=-28
+    I:idDimensionMoon=-5024
 
     # Dimension ID for Overworld Space Stations
-    I:idDimensionOverworldOrbit=-27
+    I:idDimensionOverworldOrbit=-5025
 
     # Dimension ID for Static Overworld Space Stations
-    I:idDimensionOverworldOrbitStatic=-26
+    I:idDimensionOverworldOrbitStatic=-5026
 }
 
 
@@ -188,7 +188,6 @@ general {
 
     # Set this to true for a challenging adventure where the player starts the game stranded in the Asteroids dimension with low resources (only effective if Galacticraft Planets installed).
     B:"Adventure Game Mode"=false
-
     # If this is enabled, areas sealed by Oxygen Sealers will run a seal check when the player breaks or places a block (or on block updates).  This should be enabled for a 100% accurate sealed status, but can be disabled on servers for performance reasons.
     B:"Enable Sealed edge checks"=true
 
@@ -225,7 +224,7 @@ general {
     # Update check will not run if this is set to true.
     B:"Disable Update Check"=false
 
-    # Biome Types will not be registered in the BiomeDictionary if this is set to true. Ignored (always true) for MC 1.7.2.
+    # Biome Types will not be registered in the BiomeDictionary if this is set to true.
     B:"Disable Biome Type Registrations"=false
     S:"Default key for opening fuel levels gui - Useful for modpacks"=KEY_F
     S:"Default key for opening in-game galaxy map - Useful for modpacks"=KEY_M
