--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -102,7 +102,7 @@ general {
         ReactorCraft:reactorcraft_block_ore:4 /UNCOMMON /DEEP /STANDARD
         ReactorCraft:reactorcraft_block_ore:7 /UNCOMMON /BOTH /LARGE
         ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
-        ReactorCraft:reactorcraft_block_ore:8 /COMMON /BOTH /LARGE
+        ReactorCraft:reactorcraft_block_ore:8 /COMMON /ONLYMOON /LARGE
         ReactorCraft:reactorcraft_block_fluoriteore:0 /COMMON /BOTH /STANDARD
         ReactorCraft:reactorcraft_block_fluoriteore:1 /COMMON /BOTH /STANDARD
         ReactorCraft:reactorcraft_block_fluoriteore:2 /COMMON /BOTH /STANDARD
