--- a/config/ZombieAwareness/Features.cfg
+++ b/config/ZombieAwareness/Features.cfg
@@ -11,7 +11,7 @@
     B:awareness_Sound=false
 
     # Spawn extra zombies in caves where other zombies already are if dark and away from player until Spawning.extraSpawningMaxCount is reached
-    B:extraSpawningCave=false
+    B:extraSpawningCave=true
 
     # Spawn extra zombies randomly on the surface at night if dark and away from player until Spawning.extraSpawningMaxCount is reached
     B:extraSpawningSurface=true
@@ -26,10 +26,10 @@
     B:wanderingHordes=true
 
     # MC/Forge default is 0.05, this overrides that default, set to -1 to cause no override then restore forges default in their config
-    D:zombieBabyChance=0.0
+    D:zombieBabyChance=-1
 
     # MC/Forge default is 0.1, this overrides that default, set to -1 to cause no override then restore forges default in their config
-    D:zombieSummonHelpBaseChance=0.0
+    D:zombieSummonHelpBaseChance=-1
 }
 
 
