--- a/config/ZombieAwareness/PlayerRulesAndLists.cfg
+++ b/config/ZombieAwareness/PlayerRulesAndLists.cfg
@@ -2,7 +2,7 @@
 
 "zombie awareness: player rules & lists" {
     # List of mobs to prevent enhanced AI on
-    S:blacklistAITick=Creeper, Enderman, Wolf, GrimoireOfGaia.Satyr, GrimoireOfGaia.Dryad, GrimoireOfGaia.Centaur, GrimoireOfGaia.Ender Eye, GrimoireOfGaia.Mermaid, GrimoireOfGaia.Creeper Girl, GrimoireOfGaia.Holstaurus, GrimoireOfGaia.Trader, GrimoireOfGaia.Mandragora, GrimoireOfGaia.Ender Girl, GrimoireOfGaia.Slime Girl, GrimoireOfGaia.Ender Dragon Girl, GrimoireOfGaia.Yuki-Onna, GrimoireOfGaia.Cyclops
+    S:blacklistAITick=Creeper, Enderman, Wolf
 
     # Uses list of mobs to prevent enhanced AI on
     B:blacklistUsedAITick=true
