--- a/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
@@ -836,7 +836,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=1.0
         D:09.Sanity=0.1
-        S:10.Stability=average
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
@@ -1331,7 +1331,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=1.0
         D:09.Sanity=0.1
-        S:10.Stability=average
+        S:10.Stability=none
         B:11.Slides=false
         B:"12.Slides When Wet"=false
     }
