--- a/config/enviromine/profiles/default/default_Settings.cfg
+++ b/config/enviromine/profiles/default/default_Settings.cfg
@@ -28,7 +28,7 @@ Earthquakes {
 
 
 Physics {
-    S:"Default Stability Type (BlockIDs > 175)"=loose
+    S:"Default Stability Type (BlockIDs > 175)"=none
     B:"Stone Cracks Before Falling"=true
 }
 
@@ -51,7 +51,7 @@ general {
 
     # Turn physics On/Off
     B:"Enable Physics"=true
-    B:"Enable Physics Landslide"=false
+    B:"Enable Physics Landslide"=true
     B:"Enable food spoiling"=true
     B:"Enable villager assistance"=false
     B:"Torches burn"=true
