--- a/config/headcrumbs.cfg
+++ b/config/headcrumbs.cfg
@@ -285,6 +285,15 @@ heads {
         brokescience
         AngieTheDemoness
         waterlubber
+        Toksyuryel
+        DragGon7601
+        Code_Ninja_15
+        Taraxus
+        DorinnB
+        SerenityGene
+        NachtRaben
+        SolePlayer
+        CONfoundit
      >
     S:technic <
         GenPage
