--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -64,11 +64,17 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsOsmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
