--- a/config/ZombieAwareness/General.cfg
+++ b/config/ZombieAwareness/General.cfg
@@ -17,10 +17,10 @@
     I:frequentSoundThreshold=1000
 
     # Max pathfind range for zombies [performance sensitive]
-    I:maxPFRange=64
+    I:maxPFRange=48
 
     # Max awareness range for zombies
-    I:maxPFRangeSense=64
+    I:maxPFRangeSense=48
 
     # Always target closest player [performance sensitive]
     B:omnipotent=false
@@ -29,17 +29,17 @@
     I:scentStrength=60
 
     # skips line of sight check on targetting [performance sensitive]
-    B:seeThroughWalls=false
-    I:sightRange=16
+    B:seeThroughWalls=true
+    I:sightRange=8
 
     # Random X Z variation of sound source placement
     I:soundScentSpawnPosRandom=1
 
     # Effects how far monsters will sense sound sources from
-    I:soundStrength=60
+    I:soundStrength=48
 
     # how frequently the mod iterates all entities, effects rates, less is more frequent [performance sensitive]
-    I:tickRateAILoop=5
+    I:tickRateAILoop=10
 
     # how frequently the mod iterates all players, effects rates, less is more frequent
     I:tickRatePlayerLoop=1
