--- a/GunCus/WholyGunCustom/bullets/bullet15_9x19Para.cfg
+++ b/GunCus/WholyGunCustom/bullets/bullet15_9x19Para.cfg
@@ -33,7 +33,7 @@ general {
     # 7:X = Blindness for X seconds
     # 8:X = Instant damage (harm) of X damages
     # 9:X:Y = weaken +Y * 20% damage increase for X seconds
-    # 10:X:Y = knockback +X horizontally +Y vertically.
+    # 10:X:Y = knockback +X horizontally +Y * 0.1 vertically. Vanilla knockback is cancelled when this effect is defined.
     S:Impact=9:3:1
 
     # Initial speed of the bullet in m/s. Actual speed decrease with friction and gun's attachment/barret.
@@ -44,6 +44,9 @@ general {
 
     # Name of the bullet
     S:Name=9x19Para
+
+    # Effects player accuracy. 0.0 means perfect accuracy and only the effects of spray will move the bullet, while 1.0 means normal. You may get some weird effets.
+    D:"Player Inaccuracy Multiplier"=1.0
 
     # How much bullets are being shot at a time (only one ammo is consumed)
     I:Split=1
