--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -13609,6 +13609,9 @@ immersiveengineering {
     B:stoneDevice.2=false
     B:stoneDevice.3=false
     B:stoneDevice.4=false
+    B:stoneSlab=false
+    B:stoneSlab.1=false
+    B:stoneSlab.2=false
     B:storage=false
     B:storage.1=false
     B:storage.10=false
