--- a/config/GunCus.cfg
+++ b/config/GunCus.cfg
@@ -1,10 +1,29 @@
 # Configuration file
 
 "gun customization" {
+    # Disable this to prevent block damage from explosives and bullet damage to glass.
     B:enableBlockDamage=false
+
+    # Enable this to show damage, range, accuracy, and what was hit.
+    B:enableDamageData=false
+
+    # Disable this to remove the explosive parts of Gun Customization.
     B:enableExplosives=true
+
+    # Enable this to show client/server packet transfers.
     B:enableNetworkLogs=false
+
+    # Disable this to remove the official gun pack.
     B:enableOfficialGuns=false
+
+    # This sets the knife cooldown in ticks. 20 ticks = 1 second. Whole numbers only.
+    I:knifeCooldown=30
+
+    # This sets the damage the knife does in 1/2 hearts. Can be set with decimals.
+    D:knifeDamage=5.0
+
+    # This sets the range the knife can hit in blocks. Can be set with decimals.
+    D:knifeRange=2.0
 }
 
 
