--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -419,6 +419,7 @@ tools {
 
     # The base amount of RF consumed per shot by the Railgun
     I:"Railgun: Consumed"=800
+    D:"Railgun: Damage multiplier"=1.0
 }
 
 
