--- a/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/minecraft.cfg
@@ -821,7 +821,7 @@ blocks {
         D:07.Temperature=0.0
         D:"08.Air Quality"=0.0
         D:09.Sanity=0.0
-        S:10.Stability=none
+        S:10.Stability=sand-like
         B:11.Slides=true
         B:"12.Slides When Wet"=false
     }
