--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -145,47 +145,39 @@ sound {
     # Enable biome sounds [default: true]
     B:"Enable Biome Sounds"=true
 
+    # Enable sound effect when jumping [default: true]
+    B:"Jump Sound"=true
+
+    # Master sound scale factor for biome and block sounds [range: 0.0 ~ 1.0, default: 0.5]
+    S:"Master Sound Scale Factor"=0.5
+
+    # Number of normal sound channels to configure in the sound system [range: 28 ~ 2147483647, default: 28]
+    I:"Number Normal Channels"=28
+
+    # Number of streaming sound channels to configure in the sound system [range: 4 ~ 2147483647, default: 4]
+    I:"Number Streaming Channels"=4
+
     "ice cracking" {
-        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 10000]
         I:Chance=10000
-
-        # Enable client side sound effect [default: true]
         B:Enabled=true
-
-        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
         S:"Scaling Factor"=1.0
     }
 
     "frog croaks" {
-        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 25]
         I:Chance=25
-
-        # Enable client side sound effect [default: true]
         B:Enabled=true
-
-        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
         S:"Scaling Factor"=1.0
     }
 
     "redstone ore" {
-        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 100]
         I:Chance=100
-
-        # Enable client side sound effect [default: true]
         B:Enabled=true
-
-        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
         S:"Scaling Factor"=1.0
     }
 
     "soul sand" {
-        # 1-in-N chance for sound spawn [range: 1 ~ 2147483647, default: 8000]
         I:Chance=8000
-
-        # Enable client side sound effect [default: true]
         B:Enabled=true
-
-        # Factor to apply to sound volume [range: 0.0 ~ 5.0, default: 1.0]
         S:"Scaling Factor"=1.0
     }
 
