Default configs for added mods 2.1.4.0

--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5021,6 +5021,11 @@ etfuturum {
 }
 
 
+ewysworkshop {
+    B:WorkshopTable=false
+}
+
+
 exoticbirds {
     B:eggsorter=false
     B:nest=false
@@ -16731,6 +16736,32 @@ portalgun {
 powersuits {
     B:tileluxCapacitor=false
     B:tiletinkerTable=false
+}
+
+
+practicallogistics {
+    B:ChannelSelector=false
+    B:Clock=false
+    B:DataCable=false
+    B:DataEmitter=false
+    B:DataModifier=false
+    B:DataReceiver=false
+    B:DisplayScreen=false
+    B:EntityNode=false
+    B:FluidReader=false
+    B:Hammer=false
+    B:HammerAir=false
+    B:HolographicDisplay=false
+    B:InfoCreator=false
+    B:InfoReader=false
+    B:InventoryReader=false
+    B:ItemRouter=false
+    B:LargeDisplayScreen=false
+    B:MultiCable=false
+    B:Node=false
+    B:RedstoneSignallerOFF=false
+    B:RedstoneSignallerON=false
+    B:SapphireOre=true
 }
 
 
