--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -47,6 +47,9 @@
     # biomes not saved on edges; more than 3 has no effect; -1 deactivates saving biomes
     I:biomeRingsNotSaved=-1
 
+    # Number of Chunk Biome layouts cached. Above 500 is ignored. 0 or below shuts off chunk info caching
+    I:cacheSize=0
+
     # climate not saved on edges; -1 deactivates saving climates
     I:climateRingsNotSaved=-1
 
@@ -112,26 +115,31 @@
 ##########################################################################################################
 # ocean control parameters
 #--------------------------------------------------------------------------------------------------------#
-# Frequencies are x per thousand but a little goes a very long way because seeds grow a lot. About half the total continent frequencies is the percent land. For worlds with 1.7-like generation set large island seeds to about 300. That will largely fill the oceans after seed growth.
+# Frequencies are x per thousand but a little goes a very long way because seeds grow a lot. SeparateLandmasses = true makes an oceanic world with these settings andSeparateLandmasses = false makes a continental world
 ##########################################################################################################
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Large Continent Frequency"=30
-
-    # frequency of large island seeds, about 500x1000
-    I:"Large Island Frequency"=120
+    I:"Incidence of Continents,Large"=0
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Medium Continent Frequency"=60
-
-    # frequency of medium island seeds, about 250x500
-    I:"Medium Island Frequency"=40
-
-    # True reduces the chance of landmasses merging
-    B:SeparateLandmasses=true
+    I:"Incidence of Continents,Medium"=30
 
     # frequency of small continent seeds, about 2000x4000
+    I:"Incidence of Continents,Small"=80
+
+    # frequency of large island seeds, about 500x1000
+    I:"Incidence of Islands,Large"=60
+
+    # frequency of medium island seeds, about 250x500, but they tend to break up into archipelagos
+    I:"Incidence of Islands,Medium"=40
+    I:"Large Continent Frequency"=30
+    I:"Large Island Frequency"=120
+    I:"Medium Continent Frequency"=60
+    I:"Medium Island Frequency"=40
+
+    # True mostly stops landmasses merging.With default settings you will get an oceanic world if true and a continental world if false
+    B:SeparateLandmasses=true
     I:"Small Continent Frequency"=120
 }
 
