--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -142,8 +142,23 @@ rain {
 
 
 sound {
+    # Automatically configure sound channels [default: true]
+    B:"Autoconfigure Channels"=true
+
+    # Enable sound when bow is pulled [default: true]
+    B:"Bow Pull Sound"=true
+
+    # Enable sound when item crafted [default: true]
+    B:"Crafting Sound"=true
+
     # Enable biome sounds [default: true]
     B:"Enable Biome Sounds"=true
+
+    # Enable footstep sounds [default: true]
+    B:Footsteps=true
+
+    # Sound scale factor for footstep sounds [range: 0.0 ~ 1.0, default: 0.3]
+    S:"Footsteps Sound Factor"=0.3
 
     # Enable sound effect when jumping [default: true]
     B:"Jump Sound"=true
@@ -151,11 +166,17 @@ sound {
     # Master sound scale factor for biome and block sounds [range: 0.0 ~ 1.0, default: 0.5]
     S:"Master Sound Scale Factor"=0.5
 
-    # Number of normal sound channels to configure in the sound system [range: 28 ~ 2147483647, default: 28]
+    # Number of normal sound channels to configure in the sound system (manual) [range: 28 ~ 2147483647, default: 28]
     I:"Number Normal Channels"=28
 
-    # Number of streaming sound channels to configure in the sound system [range: 4 ~ 2147483647, default: 4]
+    # Number of streaming sound channels to configure in the sound system (manual) [range: 4 ~ 2147483647, default: 4]
     I:"Number Streaming Channels"=4
+
+    # Ticks between water and lava sound events (0 to disable culling) [range: 0 ~ 2147483647, default: 20]
+    I:"Sound Culling Threshold"=20
+
+    # Enable weapons swing sound effect when attacking [default: true]
+    B:"Swing Sound"=true
 
     "ice cracking" {
         I:Chance=10000
