--- a/config/ProjectRed.cfg
+++ b/config/ProjectRed.cfg
@@ -112,9 +112,9 @@ Compatibility {
     B:"Ruby Ore"=false
     I:"Ruby Ore resistance"=0
     B:"Ruby Ore retrogen"=false
-    B:"Sapphire Ore"=false
-    I:"Sapphire Ore resistance"=0
-    B:"Sapphire Ore retrogen"=false
+    B:"Sapphire Ore"=true
+    I:"Sapphire Ore resistance"=2
+    B:"Sapphire Ore retrogen"=true
     B:"Silver Ore"=false
     I:"Silver Ore resistance"=0
     B:"Silver Ore retrogen"=false
