Reduce reccomplex frequency, alter cc for updates, reduce eb spawns.

--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -111,7 +111,7 @@ player {
         S:"Display Scale"=0.5
 
         # Enable display of potion icons in display [default: true]
-        B:Enable=true
+        B:Enable=false
 
         # Offset from left side of screen [range: 0 ~ 2147483647, default: 5]
         I:"Left Offset"=25
@@ -134,10 +134,10 @@ rain {
     B:"Desert Dust"=true
 
     # Reset rain/thunder when all players sleep [default: true]
-    B:"Reset Rain on Sleep"=true
+    B:"Reset Rain on Sleep"=false
 
     # Factor to apply to rain sound level to adjust [range: 0.0 ~ 1.0, default: 1.0]
-    S:"Sound Level"=1.0
+    S:"Sound Level"=0.8
 }
 
 
@@ -164,7 +164,7 @@ sound {
     B:"Jump Sound"=true
 
     # Master sound scale factor for biome and block sounds [range: 0.0 ~ 1.0, default: 0.5]
-    S:"Master Sound Scale Factor"=0.5
+    S:"Master Sound Scale Factor"=0.4
 
     # Number of normal sound channels to configure in the sound system (manual) [range: 28 ~ 2147483647, default: 28]
     I:"Number Normal Channels"=28
