--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -45,13 +45,13 @@
     B:alterHighlandsWorlds=false
 
     # biomes not saved on edges; more than 3 has no effect; -1 deactivates saving biomes
-    I:biomeRingsNotSaved=-1
+    I:biomeRingsNotSaved=3
 
     # Number of Chunk Biome layouts cached. Above 500 is ignored. 0 or below shuts off chunk info caching
     I:cacheSize=0
 
     # climate not saved on edges; -1 deactivates saving climates
-    I:climateRingsNotSaved=-1
+    I:climateRingsNotSaved=3
 
     # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
@@ -81,7 +81,7 @@
 
 "climate incidences" {
     # relative incidence of cool zones like forest/plains/hills/taiga/roofed forest
-    I:"Cool Zone Incidence"=1
+    I:"Cool Zone Incidence"=2
 
     # relative incidence of hot zones like savanna/desert/plains/mesa
     I:"Hot Zone Incidence"=1
@@ -90,7 +90,7 @@
     I:"Snowy Zone Incidence"=1
 
     # relative incidence of warm zones like forest/plains/hills/jungle/swamp
-    I:"Warm Zone Incidence"=1
+    I:"Warm Zone Incidence"=2
 }
 
 
@@ -120,27 +120,22 @@
 
 "ocean control parameters" {
     # frequency of large continent seeds, about 8000x16000
-    I:"Incidence of Continents,Large"=0
+    I:"Incidence of Continents,Large"=60
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Incidence of Continents,Medium"=30
+    I:"Incidence of Continents,Medium"=90
 
     # frequency of small continent seeds, about 2000x4000
-    I:"Incidence of Continents,Small"=80
+    I:"Incidence of Continents,Small"=150
 
     # frequency of large island seeds, about 500x1000
-    I:"Incidence of Islands,Large"=60
+    I:"Incidence of Islands,Large"=120
 
     # frequency of medium island seeds, about 250x500, but they tend to break up into archipelagos
     I:"Incidence of Islands,Medium"=40
-    I:"Large Continent Frequency"=30
-    I:"Large Island Frequency"=120
-    I:"Medium Continent Frequency"=60
-    I:"Medium Island Frequency"=40
 
     # True mostly stops landmasses merging.With default settings you will get an oceanic world if true and a continental world if false
-    B:SeparateLandmasses=true
-    I:"Small Continent Frequency"=120
+    B:SeparateLandmasses=false
 }
 
 
@@ -303,7 +298,7 @@ vanillabiomevillages {
     B:"Birch Forest Hills M hasVillages"=false
     B:"Birch Forest Hills hasVillages"=false
     B:"Birch Forest M hasVillages"=false
-    B:"Birch Forest hasVillages"=false
+    B:"Birch Forest hasVillages"=true
     B:"Cold Taiga Hills hasVillages"=false
     B:"Cold Taiga M hasVillages"=false
     B:"Cold Taiga hasVillages"=false
@@ -316,7 +311,7 @@ vanillabiomevillages {
     B:"Extreme Hills+ hasVillages"=false
     B:"Flower Forest hasVillages"=false
     B:"Forest Hills hasVillages"=false
-    B:"Forest hasVillages"=false
+    B:"Forest hasVillages"=true
     B:"Ice Mountains hasVillages"=false
     B:"Ice Plains Spikes hasVillages"=false
     B:"Ice Plains hasVillages"=false
@@ -345,7 +340,7 @@ vanillabiomevillages {
     B:"Swampland hasVillages"=false
     B:"Taiga (snowless) M hasVillages"=false
     B:"Taiga (snowless) hasVillages"=false
-    B:"Taiga Hills hasVillages"=false
+    B:"Taiga Hills hasVillages"=true
 }
 
 
