--- a/config/GalaxySpace/core.conf
+++ b/config/GalaxySpace/core.conf
@@ -4,9 +4,6 @@ general {
     # Enable/Disable new recipes rocket (Tier 1-3).
     B:"New Recipes Rocket"=true
 
-    # Enable/Disable Holiday Message.
-    B:enableHolidayMessage=false
-
     # Enable/Disable Check Version.
     B:enableCheckVersion=false
 
@@ -19,6 +16,9 @@ general {
     # Enable/Disable Vega System.
     B:enableVega=true
 
+    # Enable/Disable tCeti System.
+    B:enableTCeti=true
+
     # Enable/Disable Generation Lead on Overworld.
     B:enableLeadGeneration=false
 
@@ -30,6 +30,7 @@ general {
         mo:dilithium_ore /UNCOMMON /DEEP /STANDARD
         mo:tritanium_ore /COMMON /SHALLOW /STANDARD /XTRARANDOM
      >
+    B:enableHolidayMessage=false
 }
 
 
