Reduce RLD frequency and disable Enviromine mineshafts.

--- a/config/enviromine/Global_Settings.cfg
+++ b/config/enviromine/Global_Settings.cfg
@@ -86,7 +86,7 @@ Potions {
     B:"Enable New Abandoned Mineshafts"=false
 
     # Generates mineshafts in villages
-    B:"Enable Village MineShafts"=true
+    B:"Enable Village MineShafts"=false
     B:"Generate Gases"=true
 }
 
