--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -5,7 +5,7 @@ compatability {
     B:"Enable Compatmodule: Avaritia"=true
 
     # Set this to false to disable IE's built in compatability with BackTools
-    B:"Enable Compatmodule: BackTools"=false
+    B:"Enable Compatmodule: BackTools"=true
 
     # Set this to false to disable IE's built in compatability with Botania
     B:"Enable Compatmodule: Botania"=true
@@ -17,7 +17,7 @@ compatability {
     B:"Enable Compatmodule: ComputerCraft"=true
 
     # Set this to false to disable IE's built in compatability with EE3
-    B:"Enable Compatmodule: EE3"=false
+    B:"Enable Compatmodule: EE3"=true
 
     # Set this to false to disable IE's built in compatability with EnderIO
     B:"Enable Compatmodule: EnderIO"=true
@@ -26,13 +26,13 @@ compatability {
     B:"Enable Compatmodule: ExtraUtilities"=true
 
     # Set this to false to disable IE's built in compatability with Forestry
-    B:"Enable Compatmodule: Forestry"=false
+    B:"Enable Compatmodule: Forestry"=true
 
     # Set this to false to disable IE's built in compatability with ForgeMicroblock
     B:"Enable Compatmodule: ForgeMicroblock"=true
 
     # Set this to false to disable IE's built in compatability with HydCraft
-    B:"Enable Compatmodule: HydCraft"=false
+    B:"Enable Compatmodule: HydCraft"=true
 
     # Set this to false to disable IE's built in compatability with IC2
     B:"Enable Compatmodule: IC2"=true
@@ -41,7 +41,7 @@ compatability {
     B:"Enable Compatmodule: Mekanism"=true
 
     # Set this to false to disable IE's built in compatability with MineFactoryReloaded
-    B:"Enable Compatmodule: MineFactoryReloaded"=false
+    B:"Enable Compatmodule: MineFactoryReloaded"=true
 
     # Set this to false to disable IE's built in compatability with MineTweaker3
     B:"Enable Compatmodule: MineTweaker3"=true
@@ -53,16 +53,16 @@ compatability {
     B:"Enable Compatmodule: Railcraft"=true
 
     # Set this to false to disable IE's built in compatability with TConstruct
-    B:"Enable Compatmodule: TConstruct"=false
+    B:"Enable Compatmodule: TConstruct"=true
 
     # Set this to false to disable IE's built in compatability with Thaumcraft
     B:"Enable Compatmodule: Thaumcraft"=true
 
     # Set this to false to disable IE's built in compatability with ThermalDynamics
-    B:"Enable Compatmodule: ThermalDynamics"=false
+    B:"Enable Compatmodule: ThermalDynamics"=true
 
     # Set this to false to disable IE's built in compatability with ThermalExpansion
-    B:"Enable Compatmodule: ThermalExpansion"=false
+    B:"Enable Compatmodule: ThermalExpansion"=true
 
     # Set this to false to disable IE's built in compatability with ThermalFoundation
     B:"Enable Compatmodule: ThermalFoundation"=true
@@ -80,19 +80,19 @@ compatability {
     B:"Enable Compatmodule: cuttingedge"=true
 
     # Set this to false to disable IE's built in compatability with denseores
-    B:"Enable Compatmodule: denseores"=false
+    B:"Enable Compatmodule: denseores"=true
 
     # Set this to false to disable IE's built in compatability with etfuturum
     B:"Enable Compatmodule: etfuturum"=true
 
     # Set this to false to disable IE's built in compatability with gregtech
-    B:"Enable Compatmodule: gregtech"=false
+    B:"Enable Compatmodule: gregtech"=true
 
     # Set this to false to disable IE's built in compatability with harvestcraft
     B:"Enable Compatmodule: harvestcraft"=true
 
     # Set this to false to disable IE's built in compatability with steamcraft2
-    B:"Enable Compatmodule: steamcraft2"=false
+    B:"Enable Compatmodule: steamcraft2"=true
 }
 
 
@@ -138,12 +138,10 @@ general {
     B:ColourblindSupport=false
 
     # Set this to true to completely disable the ore-crushing recipes with the Engineers Hammer
-    B:"Disable Hammer Crushing"=false
-    B:"Disable Hammer Crushing "=false
+    B:"Disable Hammer Crushing"=true
 
     # The amount of RF that equal 1 EU. 4 by default, so 4RF == 1EU and .25EU == 1RF
     I:"EU Conversion"=4
-    B:"Force-Enable Hammer Crushing"=false
 
     # Set this to false to prevent wires from outputting GregTech EU
     B:"GregTech Compatability"=true
@@ -158,7 +156,7 @@ general {
     B:"Increased Renderboxes"=true
 
     # Increase the distance at which certain TileEntities (specifically windmills) are still visible. This is a modifier, so set it to 1 for default render distance, to 2 for doubled distance and so on.
-    B:"Increased Tile Renderdistance"=1.5
+    D:"Increased Tile Renderdistance"=1.5
 
     # The last version of IE that was run in this instance. DO NOT CHANGE THIS, IT WILL BREAK THINGS.
     D:LastVersion=0.71
@@ -169,12 +167,13 @@ general {
     # A list of preferred Mod IDs that results of IE processes should stem from, aka which mod you want the copper to come from. This affects the ores dug by the excavator, as well as those crushing recipes that don't have associated IE items. This list is in order of priority.
     S:"Preferred Ores" <
         ImmersiveEngineering
-        ThermalFoundation
+        RotaryCraft
+        ElectriCraft
+        ReactorCraft
      >
 
     # Set this to false to hide the update news in the manual
     B:"Show Update News"=true
-    B:"Support for colourblind people, gives a text-based output on capacitor sides"=false
 
     # The ID of the texture sheet used for revolvers. This should probably never conflict since not many mods do custom sheets.
     I:"TextureSheet: Revolvers"=94
@@ -249,10 +248,10 @@ machines {
     I:"Diesel Generator: Output"=1440
 
     # The base RF that is output by the dynamo. This will be modified by the rotation modifier of the attached water- or windmill
-    I:"Dynamo: Output"=3
+    D:"Dynamo: Output"=3.0
 
     # The chance that the Excavator will not dig up an ore with the currently downward-facing bucket.
-    D:"Excavator: Chance"=0.05000000074505806
+    D:"Excavator: Chance"=0.05
 
     # The RF per tick the Excavator will consume to dig
     I:"Excavator: Consumed"=1440
@@ -309,7 +308,7 @@ machines {
     I:"Wire Connector Input" <
         256
         1024
-        4096
+        2048
      >
 }
 
@@ -370,7 +369,7 @@ oregen {
 
 potions {
     # The potion ID for the Conductive potion effect
-    I:Conductive=31
+    I:Conductive=30
 
     # The potion ID for the Flammable potion effect
     I:Flammable=27
@@ -379,7 +378,7 @@ potions {
     I:Slippery=28
 
     # The potion ID for the Sticky potion effect
-    I:Sticky=30
+    I:Sticky=31
 }
 
 
@@ -419,7 +418,6 @@ tools {
 
     # The base amount of RF consumed per shot by the Railgun
     I:"Railgun: Consumed"=800
-    D:"Railgun: Damage multiplier"=1.0
 }
 
 
