Plates are made in the Metal Press; RC plates no longer made in Rolling Mill

--- a/config/Reika/DragonAPI.cfg
+++ b/config/Reika/DragonAPI.cfg
@@ -9,7 +9,7 @@
     B:"Increase sound channel count"=true
     B:"Log Loading Info To Separate File"=false
     B:"Log Sync Packet CME Avoidance"=true
-    B:"Log errors to chat"=true
+    B:"Log errors to chat"=false
     B:"Only show update notice to Ops or SSP"=true
     B:"Only show update notice to pack creator"=true
     B:"Restore Obsidian Blast Resistance"=true
