--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -145,11 +145,24 @@ sound {
     # Automatically configure sound channels [default: true]
     B:"Autoconfigure Channels"=true
 
+    # Sounds to block from playing [default: ]
+    S:"Blocked Sounds" <
+     >
+
     # Enable sound when bow is pulled [default: true]
     B:"Bow Pull Sound"=true
 
     # Enable sound when item crafted [default: true]
     B:"Crafting Sound"=true
+
+    # Sounds to cull from frequent playing [default: [^minecraft:liquid.*], [minecraft:mob.sheep.say], [minecraft:mob.chicken.say], [minecraft:mob.cow.say], [minecraft:mob.pig.say]]
+    S:"Culled Sounds" <
+        ^minecraft:liquid.*
+        minecraft:mob.sheep.say
+        minecraft:mob.chicken.say
+        minecraft:mob.cow.say
+        minecraft:mob.pig.say
+     >
 
     # Enable biome sounds [default: true]
     B:"Enable Biome Sounds"=true
