--- a/GunCus/WholyGunCustom/guns/SPAS12.cfg
+++ b/GunCus/WholyGunCustom/guns/SPAS12.cfg
@@ -52,8 +52,7 @@ general {
 
     # Shooting type. Higher values are cumulative.
     # 0 = Single Shooting | 1 = Burst Shooting | 2 = Auto Shooting
-    I:Shoot=2
-    I:Shoot-original=0
+    I:Shoot=0
 
     # Sound event played when shooting while gun has a silencer.
     # Select the sound file in the sounds.json file. Only .ogg files are supported by Minecraft.
@@ -65,7 +64,7 @@ general {
     D:SoundModifier=1.0
 
     # Texture of the gun. Leave blanc for default
-    S:Texture=spas12
+    S:Texture=SPAS12
 
     # Does this gun use magazines? False, if the gun is for example a shotgun.
     B:UsingMags=true
