--- a/GunCus/WholyGunCustom/guns/flamethrower.cfg
+++ b/GunCus/WholyGunCustom/guns/flamethrower.cfg
@@ -35,7 +35,7 @@ general {
     # Sound played when shooting.
     # Select the sound file in the sounds.json file. Only .ogg files are supported by Minecraft.
     # Leave blanc for default
-    S:NormalSound=asd
+    S:NormalSound=flamethrower
 
     # Defines the gun base recoil.
     # Applied recoil is gun.RecoilModifier x bullet.RecoilModifier.
