--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -52,24 +52,38 @@ ores {
     # These settings should be auto-detected during worldgen and act as an override.
     # 0 will prevent flowers, 2 will enforce (set automatically), 1 is default. [range: 0 ~ 2, default: 1]
     I:OreExists...=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsAluminum=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsCadmium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsCopper=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsNickel=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsOsmium=0
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsSilver=2
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsThorium=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsTin=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsUranium=2
 
     #  [range: 0 ~ 2, default: 1]
@@ -103,7 +117,7 @@ sluice {
     B:enableSluice=true
 
     # Set to true to allow dirt to be used in the sluice.  Dirt acts like sand. [default: false]
-    B:sluiceAllowsDirt=false
+    B:sluiceAllowsDirt=true
 
     # Time it takes for the sluice to make 1 operation.  This value is multiplied by 75 ticks. [range: 1 ~ 20, default: 2]
     I:sluiceCycleTime=2
