--- a/config/Galacticraft/core.conf
+++ b/config/Galacticraft/core.conf
@@ -46,10 +46,10 @@ general {
     B:"Disable Spaceship Particles"=false
 
     # If true, this will move the Oxygen Indicator to the left side. You can combine this with "Minimap Bottom"
-    B:"Minimap Left"=false
+    B:"Minimap Left"=true
 
     # If true, this will move the Oxygen Indicator to the bottom. You can combine this with "Minimap Left"
-    B:"Minimap Bottom"=false
+    B:"Minimap Bottom"=true
 
     # Increasing this will increase amount of oil that will generate in each chunk.
     D:"Oil Generation Factor"=1.8
