--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -10,6 +10,12 @@ general {
     # Enchantment ID for the Pulverizer enchantment. [range: 64 ~ 255, default: 81]
     I:PulverizerEnchantmentID=81
 
+    # Enables debug messages [default: false]
+    B:ShowFlowerDebug=false
+
+    # Enchantment ID for the Vein Cracker enchantment. [range: 64 ~ 255, default: 82]
+    I:VeinCrackerEnchantmentID=82
+
     # Toggle to enable/disable asthetic water placement. [default: true]
     B:sluicePlacesWaterSource=false
 
