--- a/config/StorageDrawers.cfg
+++ b/config/StorageDrawers.cfg
@@ -70,6 +70,7 @@ general {
     B:enableDebugLogging=false
     B:enableDrawerUI=true
     B:enableFallbackRecipes=true
+    B:enableFramedDrawers=true
     B:enableIndicatorUpgrades=true
     B:enableItemConversion=true
     B:enableLockUpgrades=true
