--- a/config/dsurround/dsurround.cfg
+++ b/config/dsurround/dsurround.cfg
@@ -22,6 +22,10 @@ aurora {
 
 
 biomes {
+    # Biome alias list [default: ]
+    S:"Biome Alias" <
+     >
+
     # Configuration files for configuring Biome Registry [default: ]
     S:"Config Files" <
      >
