--- a/config/etfuturum.cfg
+++ b/config/etfuturum.cfg
@@ -2,7 +2,7 @@
 
 general {
     B:"Allow non-opaque armour"=true
-    B:Anvil=true
+    B:Anvil=false
     B:"Armour Stand"=true
     B:"Baby growth boost"=true
     B:Banners=true
@@ -17,7 +17,7 @@ general {
     B:Doors=true
     B:"Dragon respawning"=true
     B:Elytra=true
-    B:"Enchanting Table"=true
+    B:"Enchanting Table"=false
     B:Endermite=true
     B:"Fancy Skulls"=true
     B:"Fences and Gates"=true
