--- a/config/enviromine/profiles/default/CustomProperties/BiomesOPlenty.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/BiomesOPlenty.cfg
@@ -1608,3 +1608,26 @@ dimension {
 }
 
 
+##########################################################################################################
+# spoiling
+#--------------------------------------------------------------------------------------------------------#
+# Set the properties of spoliable items
+##########################################################################################################
+
+spoiling {
+
+    item_food_food {
+        S:01.ID=BiomesOPlenty:food
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=BiomesOPlenty:food
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=-1
+    }
+
+}
+
+
