--- a/config/enviromine/profiles/default/CustomProperties/Forestry.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/Forestry.cfg
@@ -1,2 +1,25 @@
 # Configuration file
 
+##########################################################################################################
+# spoiling
+#--------------------------------------------------------------------------------------------------------#
+# Set the properties of spoliable items
+##########################################################################################################
+
+spoiling {
+
+    item_for_beverage_beverage {
+        S:01.ID=Forestry:beverage
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=Forestry:beverage
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=-1
+    }
+
+}
+
+
