--- a/config/enviromine/profiles/default/CustomProperties/harvestcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/harvestcraft.cfg
@@ -1,2 +1,49 @@
 # Configuration file
 
+##########################################################################################################
+# spoiling
+#--------------------------------------------------------------------------------------------------------#
+# Set the properties of spoliable items
+##########################################################################################################
+
+spoiling {
+
+    item_honeyItem_honeySpoiling {
+        S:01.ID=harvestcraft:honeyItem
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=harvestcraft:honeyItem
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=-1
+    }
+
+    item_zombiejerkyItem_zombiejerkyItem {
+        S:01.ID=harvestcraft:zombiejerkyItem
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=enviromine:rottenFood
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=28
+    }
+
+    item_beefjerkyItem_beefjerkyItem {
+        S:01.ID=harvestcraft:beefjerkyItem
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=enviromine:rottenFood
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=28
+    }
+
+}
+
+
