--- a/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
+++ b/config/enviromine/profiles/default/CustomProperties/thaumcraft.cfg
@@ -97,3 +97,38 @@ blocks {
 }
 
 
+##########################################################################################################
+# spoiling
+#--------------------------------------------------------------------------------------------------------#
+# Set the properties of spoliable items
+##########################################################################################################
+
+spoiling {
+
+    item_ItemManaBean_ItemManaBean {
+        S:01.ID=Thaumcraft:ItemManaBean
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=Thaumcraft:ItemManaBean
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=-1
+    }
+
+    item_ItemZombieBrain_ItemZombieBrain {
+        S:01.ID=Thaumcraft:ItemZombieBrain
+        I:02.Damage=-1
+
+        # Set blank to rot into nothing
+        S:"03.Rotten ID"=Thaumcraft:ItemZombieBrain
+        I:"04.Rotten Damage"=-1
+
+        # Set this to -1 to disable rotting on this item
+        I:"05.Days To Rot"=-1
+    }
+
+}
+
+
